syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./;ftxproto";

service ftx {
    rpc GetFTXStatus (GetFTXStatusRequest) returns (GetFTXStatusResponse) {}

    rpc GetFTXFundingRates (GetFTXFundingRatesRequest) returns (GetFTXFundingRatesResponse) {}

    rpc ListAccountDeposits (ListAccountDepositsRequest) returns (ListAccountDepositsResponse) {}
}

message ListAccountDepositsRequest {
    string actor_id = 1;
    // Seconds in unix time
    int64 start = 2;
    // Seconds in unix time
    int64 end = 3;
}

message FTXCredentials {
    string api_key = 1;
    string secret_key = 2;
    string subaccount = 3;
}

message ListAccountDepositsResponse {
    repeated DepositRecord deposits = 1;
}

message DepositRecord {
    string coin = 1;
    int64 confirmations = 2;
    google.protobuf.Timestamp confirmed_time = 3;
    float fee = 4;
    int64 id = 5;
    google.protobuf.Timestamp sent_time = 6;
    float size = 7;
    string status = 8;
    google.protobuf.Timestamp time = 9;
    string transaction_id = 10;
}

message GetFTXStatusRequest {}

message GetFTXStatusResponse {
    int64 server_time = 1;
    int64 request_latency = 2;
}

message GetFTXFundingRatesRequest {
    string symbol = 1;
    int64 start_time = 2;
    int64 end_time = 3;
    int64 limit = 4;
}

message FTXFundingRatesInfo {
    string symbol = 1;
    float funding_rate = 2;
    string funding_time = 3;
}

message GetFTXFundingRatesResponse {
    repeated FTXFundingRatesInfo funding_rates = 1;
}
